package ar.edu.itba.ss

class SimulationState(
    val time: Double,
    val positions: DoubleArray,
    val speeds: DoubleArray,
)