package ar.edu.itba.ss.integrators

import ar.edu.itba.ss.SimulationState

interface Integrator: Iterable<SimulationState> {
}